# kea-pd-hook

./: .gitignore  .opencode.json  AGENTS.md  CMakeLists.txt  README.md  main.py  netbox_client.cc  netbox_client.h  pd_webhook.cc  pyproject.toml  router_config_server.py  test_client.py  test_complete_flow.py  test_graphql.py  test_interface_resolution.py  test_route_verification.py  test_router_check.py  test_router_client.py  test_server.py  test_simple_graphql.py
.cache/clangd/index/: pd_webhook.cc.95933DA20253CC47.idx
docs/: implementation-plan.md  mkii.md
mock_kea/cc/: data.h
mock_kea/dhcp6/: dhcp6.h
mock_kea/hooks/: hooks.h
netbox-scripts/: extract_prefix_data_webhook.py  log_prefix_data.py  log_prefix_data_corrected.py
plans/: improve-code-maturity.md
